--- a/index.html
+++ b/index.html
@@ -1,32 +1,54 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Welcome to My Page</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding-top: 100px;
-      background: #f0f4f8;
-    }
-    h1 {
-      color: #333;
-    }
-    a.button {
-      display: inline-block;
-      padding: 10px 20px;
-      margin-top: 20px;
-      background-color: #007bff;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>VR Realms - Next Gen VR for All</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Hello, I'm Live on GitHub Pages!</h1>
-  <p>This is a simple landing page hosted for free.</p>
-  <a class="button" href="https://your-link.com">Learn More</a>
+    <header>
+        <h1>VR Realms</h1>
+        <p>Affordable, Immersive, and Ready for Everyone</p>
+    </header>
+    <section class="intro">
+        <h2>Our Mission</h2>
+        <p>Bringing immersive VR experiences to education, fitness, and real-world applications—affordable for all.</p>
+    </section>
+    <section class="problem">
+        <h2>Problems We're Solving</h2>
+        <ul>
+            <li>High cost of VR hardware</li>
+            <li>Lack of content outside of gaming</li>
+            <li>Limited access in education and fitness</li>
+            <li>Inaccessible for schools and small businesses</li>
+        </ul>
+    </section>
+    <section class="solution">
+        <h2>Our Solution</h2>
+        <ul>
+            <li>Integrated fitness & education apps</li>
+            <li>Affordable hardware with premium features</li>
+            <li>Developer-friendly ecosystem</li>
+            <li>Wireless & standalone functionality</li>
+        </ul>
+    </section>
+    <section class="features">
+        <h2>Key Features</h2>
+        <ul>
+            <li>Built-in 3D audio</li>
+            <li>4K per eye resolution</li>
+            <li>Advanced motion tracking (6DoF)</li>
+            <li>Ergonomic and lightweight design</li>
+        </ul>
+    </section>
+    <section class="team">
+        <h2>Our Team</h2>
+        <p>Led by passionate engineers, designers, and business minds.</p>
+        <p>Vamsi Indela, Swathi Karneti, Rajendra Nagaraju, Navyasri Thathireddy, Pramodh V</p>
+    </section>
+    <footer>
+        <p>© 2025 VR Realms. All rights reserved.</p>
+    </footer>
 </body>
 </html>
