--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>VR Realms - Next Gen VR for All</title>
+    <title>VR Realms - Next Generation VR for All</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
