--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<p>And there are no hoverboards or flying cars.<br />
 							Just apps. Lots of mother flipping apps.</p>
 						</header>
-						<span class="image"><img src="images/test.png" alt="" /></span>
+						<span class="image-banner"><img src="images/test.png" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
