--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Landed by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Landed by HTML5 UP</title>
+		<title>VR Realms</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,40 +13,21 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
-						</ul>
-					</nav>
+				    <h1 id="logo">
+				        <a href="index.html">
+				            <img src="images/logo.png" alt="VR Realms Logo" style="height: 1.5em; vertical-align: middle; margin-right: 0.5em;">
+				            VR Realms
+				        </a>
+				    </h1>
 				</header>
 
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>The future has landed</h2>
-							<p>And there are no hoverboards or flying cars.<br />
-							Just apps. Lots of mother flipping apps.</p>
+							<h2>Reality Was Just the Beginning</h2>
+							<p>Slip on. Power up.<br />
+							Enter worlds you've only dreamed of—with VR that bends space, time, and imagination.</p>
 						</header>
 						<span class="image"><img src="images/test.png" alt="" /></span>
 					</div>
@@ -65,23 +42,15 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>Reimagining Reality for Everyone</h2>
+										<p>Affordable. Immersive. Purpose-driven VR experiences built for the next generation.</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>VR Realms bridges the gap between cutting-edge technology and everyday accessibility. Our VR headsets offer 4K displays per eye, spatial audio, ergonomic comfort, and standalone wireless operation — all at a price point designed for students, families, and growing businesses.</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>From fitness to classrooms, gaming to corporate training — our multi-sector ecosystem empowers developers and users alike. With built-in education modules, gamified workouts, and seamless B2B solutions, VR Realms is shaping how the world learns, moves, and experiences.</p>
 								</div>
 							</div>
 						</div>
@@ -94,13 +63,10 @@
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2>Meet the VRX-One Headset</h2>
+							<p>All-in-one performance packed into a sleek, standalone design</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+						<p>Designed for immersive experiences, the VRX-One features dual 4K AMOLED lenses, ultra-responsive 6DoF motion tracking, and built-in spatial audio. No wires, no external devices—just pure freedom. Whether you're jumping into a virtual fitness class or navigating interactive lessons, the VRX-One adapts to your world with power, precision, and style. Engineered for comfort with a lightweight frame and customizable fit, it's your new portal to every reality.</p>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
@@ -110,13 +76,10 @@
 					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>Create the Future: VR Realms Developer Hub</h2>
+							<p>A powerful platform for building apps that educate, train, and transform</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+						<p>The VR Realms Developer Hub is more than a toolkit — it's a launchpad. With support for education, fitness, and enterprise sectors, it empowers creators to build immersive applications that run seamlessly on our VR headsets. Whether you're designing interactive science lessons or gamified workouts, our open ecosystem ensures your ideas reach the right audiences. Backed by cross-platform compatibility, SDK access, and a growing app store, this is where real innovation takes root.</p>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
@@ -125,46 +88,46 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+							<h2>Everything You Need to Enter the Virtual World</h2>
+							<p>From powerful hardware to a thriving app ecosystem — VR Realms builds the future of immersive tech</p>
 						</header>
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-chart-area"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon solid alt major fa-vr-cardboard"></span>
+									<h3>Next-Gen VR Headsets</h3>
+									<p>Standalone, wireless headsets with dual 4K AMOLED displays, spatial audio, and ergonomic comfort at an accessible price point.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon solid alt major fa-laptop-code"></span>
+									<h3>Developer Platform</h3>
+									<p>Robust SDKs and cross-platform tools to help developers build immersive apps in education, fitness, gaming, and enterprise training.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon solid alt major fa-dumbbell"></span>
+									<h3>Fitness Integration</h3>
+									<p>Gamified workouts and real-time motion tracking help users stay active and engaged while immersed in virtual environments.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon solid alt major fa-graduation-cap"></span>
+									<h3>Education Modules</h3>
+									<p>Interactive lessons and virtual classrooms designed to make learning engaging and affordable for schools and universities.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon solid alt major fa-building"></span>
+									<h3>B2B Custom Solutions</h3>
+									<p>Tailored VR applications for real estate, interior design, and corporate training — helping businesses visualize and train better.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon solid alt major fa-store"></span>
+									<h3>App Marketplace</h3>
+									<p>A growing ecosystem of fitness, learning, and enterprise apps available via subscription or in-app purchases within our VR platform.</p>
 								</section>
 							</div>
 						</div>
 						<footer class="major">
 							<ul class="actions special">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
+								<li><a href="#" class="button">Explore the Ecosystem</a></li>
 							</ul>
 						</footer>
 					</div>
@@ -174,13 +137,17 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>Join the VR Realms Waitlist</h2>
+							<p>Sign up for early access, updates, and exclusive launch perks.</p>
 						</header>
-						<form method="post" action="#" class="cta">
+						<form method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSfDLFYe8p2rFLE8TpdgSQ-ELwD-Pni9jh2fHgw9UowmuGrzBw/formResponse" target="_blank" class="cta">
 							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
+								<div class="col-8 col-12-xsmall">
+									<input type="email" name="entry.949482542" id="email" placeholder="Your Email Address" required />
+								</div>
+								<div class="col-4 col-12-xsmall">
+									<input type="submit" value="Get Notified" class="fit primary" />
+								</div>
 							</div>
 						</form>
 					</div>
@@ -188,16 +155,9 @@
 
 			<!-- Footer -->
 				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
+				
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; VR Realms. All rights reserved.</li>
 					</ul>
 				</footer>
 
