--- a/index.html
+++ b/index.html
@@ -12,24 +12,29 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
-				    <h1 id="logo">
-				        <a href="index.html">
-				            <img src="images/logo.png" alt="VR Realms Logo" style="height: 1.5em; vertical-align: middle; margin-right: 0.5em;">
-				            VR Realms
-				        </a>
-				    </h1>
+				<header id="header" style="display: flex; align-items: center; padding: 1em 2em;">
+					<a href="index.html" style="display: flex; align-items: center; text-decoration: none; color: white;">
+						<img src="images/logo.png" alt="VR Realms Logo" 
+						     style="height: 2.5em; width: 2.5em; border-radius: 50%; object-fit: cover; margin-right: 0.5em; background: #fff;" />
+						<span style="font-size: 1.25em; font-weight: bold;">VR Realms</span>
+					</a>
 				</header>
 
 			<!-- Banner -->
 				<section id="banner">
-					<div class="content">
-						<header>
-							<h2>Reality Was Just the Beginning</h2>
-							<p>Slip on. Power up.<br />
-							Enter worlds you've only dreamed of—with VR that bends space, time, and imagination.</p>
-						</header>
-						<span class="image"><img src="images/test.png" alt="" /></span>
+					<div class="content" style="display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap;">
+						<div style="flex: 1; min-width: 300px;">
+							<header>
+								<h2>Reality Was Just the Beginning</h2>
+								<p>Slip on. Power up.<br />
+								Enter worlds you've only dreamed of—with VR that bends space, time, and imagination.</p>
+							</header>
+						</div>
+						<div style="flex: 1; display: flex; justify-content: center; min-width: 300px;">
+							<span class="image" style="border-radius: 50%; overflow: hidden; width: 280px; height: 280px;">
+								<img src="images/test.png" alt="VR Headset" style="width: 100%; height: 100%; object-fit: cover;" />
+							</span>
+						</div>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
