--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header" style="display: flex; align-items: center; padding: 1em 2em;">
-					<a href="index.html" style="display: flex; align-items: center; text-decoration: none; color: white;">
-						<img src="images/logo.png" alt="VR Realms Logo" 
-						     style="height: 2.5em; width: 2.5em; border-radius: 50%; object-fit: cover; margin-right: 0.5em; background: #fff;" />
-						<span style="font-size: 1.25em; font-weight: bold;">VR Realms</span>
-					</a>
+				<header id="header">
+				    <h1 id="logo">
+				        <a href="index.html">
+				            <img src="images/logo.png" alt="VR Realms Logo" style="height: 1.5em; vertical-align: middle; margin-right: 0.5em;">
+				            VR Realms
+				        </a>
+				    </h1>
 				</header>
 
 			<!-- Banner -->
