--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<div class="content" style="display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap;">
-						<div style="flex: 1; min-width: 300px;">
+					<div class="content" style="max-width: 1100px; margin: 0 auto; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; padding: 2em;">
+						<div style="flex: 1 1 500px; padding-right: 2em;">
 							<header>
 								<h2>Reality Was Just the Beginning</h2>
 								<p>Slip on. Power up.<br />
 								Enter worlds you've only dreamed of—with VR that bends space, time, and imagination.</p>
 							</header>
 						</div>
-						<div style="flex: 1; display: flex; justify-content: center; min-width: 300px;">
-							<span class="image" style="border-radius: 50%; overflow: hidden; width: 280px; height: 280px;">
+						<div style="flex: 0 1 300px; display: flex; justify-content: center;">
+							<span class="image" style="border-radius: 50%; overflow: hidden; width: 240px; height: 240px;">
 								<img src="images/test.png" alt="VR Headset" style="width: 100%; height: 100%; object-fit: cover;" />
 							</span>
 						</div>
