--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<header id="header">
 				    <h1 id="logo">
 				        <a href="index.html">
-				            <img src="images/logo.png" alt="VR Realms Logo" style="height: 1.5em; vertical-align: middle; margin-right: 0.5em;">
+				            <img src="images/logo.jpg" alt="VR Realms Logo" style="height: 1.5em; vertical-align: middle; margin-right: 0.5em;">
 				            VR Realms
 				        </a>
 				    </h1>
