--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<header id="header">
 				    <h1 id="logo">
 				        <a href="index.html">
-				            <img src="images/logo.jpg" alt="VR Realms Logo" style="height: 1.5em; vertical-align: middle; margin-right: 0.5em;">
+				            <img src="images/logo.jpg" alt="VR Realms Logo" style="height: 3em; width: 3em; vertical-align: middle; margin-right: 0.5em;">
 				            VR Realms
 				        </a>
 				    </h1>
@@ -23,7 +23,7 @@
 
 			<!-- Banner -->
 				<section id="banner" style="min-height: 100vh; display: flex; align-items: center; justify-content: center; padding: 2em 1em;">
-					<div style="max-width: 1100px; width: 100%; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 2em;">
+					<div class="content" style="max-width: 1100px; width: 100%; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 2em;">
 						
 						<div style="flex: 1 1 500px; text-align: left;">
 							<header>
