--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				
 						<div style="flex: 0 1 280px; display: flex; justify-content: center;">
 							<span class="image" style="border-radius: 50%; overflow: hidden; width: 240px; height: 240px;">
-								<img src="images/test.png" alt="VR Headset" style="width: 100%; height: 100%; object-fit: cover;" />
+								<img src="images/Hero.png" alt="VR Headset" style="width: 100%; height: 100%; object-fit: cover;" />
 							</span>
 						</div>
 				
@@ -45,7 +45,7 @@
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/banner.png" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
@@ -69,7 +69,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/product.png" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Meet the VRX-One Headset</h2>
@@ -82,7 +82,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/hub.png" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Create the Future: VR Realms Developer Hub</h2>
